src/app/participate/participate.component.scss
@import '../../styles/variables';
@import '~@angular/material/theming';

.participate-wrapper {
  background-color: $dark-grey;
}

.providers {
  button {
    margin: 6px;
  }
  .web3-logo {
    height: 48px + 16px;
    img {
      height: 48px;
    } 
  }
}

mat-vertical-stepper {
  margin-left: -18px;
  @include mat-elevation(6); 
  @media (max-width: 800px) {
    margin-left: 4px;
  }
}

pre {
  padding: 8px;
}

div {
  word-wrap: break-word;
}

mat-form-field.full-width {
  width: 100%;
}

.header {
  color: $white;
  padding-bottom: 30px;
  padding-top: 20px;
  h1 {
    font-weight: normal;
  }
  a {
    color: $pink;
    text-decoration: none;
  }
  @media (max-width: 800px) {
    margin-left: 4px;
    padding: 30px;
  }
}

